--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <!--main css-->
     <link rel="stylesheet" href="./css/style.css" />
-    <title>Homepage</title>
+    <title>الصفحة الرئيسية</title>
   </head>
   <body>
     <!--start header-->
