--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <div class="icon_text">
               <h6>
                 <span class="counter num" data-goal="5580">0</span>مريضاً جديداً
-                بدأوا رحلة علاجهم
+                بدأوا رحلة <br> علاجهم
               </h6>
             </div>
           </div>
