--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
     <title>الصفحة الرئيسية</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
-        <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-70299134-1"></script>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-70299134-1"></script>
         <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
         gtag('config', 'UA-70299134-1');
-        </script> -->
+        </script>
   <!-- Google Tag Manager -->
   </head>
   <body>
@@ -44,7 +44,11 @@
     <!--end header-->
 
     <!--start home section-->
-    <section class="home"></section>
+    <section class="hero">
+      <div class="row g-0">
+        <img src="./img/Banner.jpg" class="img-fluid" alt="">
+      </div>
+    </section>
     <!--end home section-->
 
     <!--start our sponsors section-->
